vidéo 3 en cours

--- a/src/sp4_console_cordier_danjou/fenetreDeJeu.form
+++ b/src/sp4_console_cordier_danjou/fenetreDeJeu.form
@@ -105,6 +105,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="D&#xe9;marrer partie"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_startActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="100" y="110" width="-1" height="-1"/>
@@ -121,7 +124,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="720" y="210" width="290" height="250"/>
+          <AbsoluteConstraints x="720" y="200" width="290" height="250"/>
         </Constraint>
       </Constraints>
 
@@ -279,7 +282,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="720" y="480" width="290" height="160"/>
+          <AbsoluteConstraints x="720" y="460" width="290" height="160"/>
         </Constraint>
       </Constraints>
 
